--- a/contact.html
+++ b/contact.html
@@ -38,21 +38,21 @@
             </div>
             <div class="col-lg-6 text-right">
                 <div class="d-inline-flex align-items-center">
-                    <a class="text-primary px-2" href="">
+                    <a class="text-primary px-2" href="https://www.facebook.com/profile.php?id=61558305328547">
                         <i class="fab fa-facebook-f"></i>
                     </a>
-                    <a class="text-primary px-2" href="">
+                    <!-- <a class="text-primary px-2" href="">
                         <i class="fab fa-twitter"></i>
-                    </a>
-                    <a class="text-primary px-2" href="">
+                    </a> -->
+                    <!-- <a class="text-primary px-2" href="">
                         <i class="fab fa-linkedin-in"></i>
-                    </a>
-                    <a class="text-primary px-2" href="">
+                    </a> -->
+                    <a class="text-primary px-2" href="https://www.instagram.com/venecia_spa_movil/">
                         <i class="fab fa-instagram"></i>
                     </a>
-                    <a class="text-primary pl-2" href="">
+                    <!-- <a class="text-primary pl-2" href="">
                         <i class="fab fa-youtube"></i>
-                    </a>
+                    </a> -->
                 </div>
             </div>
         </div>
@@ -115,26 +115,26 @@
                         <h6 class="d-inline-block text-white text-uppercase bg-primary py-1 px-2">Contact</h6>
                         <h1 class="mb-4">Contacto Para Cualquier Consulta</h1>
                         <div id="success"></div>
-                        <form name="sentMessage" id="contactForm" novalidate="novalidate">
+                        <form action="https://formspree.io/f/xleqajwy" method="POST" id="contactForm" novalidate="novalidate">
                             <div class="form-row">
                                 <div class="col-sm-6 control-group">
-                                    <input type="text" class="form-control border-0 p-4" id="name" placeholder="Your Name"
+                                    <input type="text" class="form-control border-0 p-4" id="name" name="name" placeholder="Your Name"
                                         required="required" data-validation-required-message="Please enter your name" />
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="col-sm-6 control-group">
-                                    <input type="email" class="form-control border-0 p-4" id="email" placeholder="Your Email"
+                                    <input type="email" class="form-control border-0 p-4" id="email" name="email" placeholder="Your Email"
                                         required="required" data-validation-required-message="Please enter your email" />
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
                             <div class="control-group">
-                                <input type="text" class="form-control border-0 p-4" id="subject" placeholder="Subject"
+                                <input type="text" class="form-control border-0 p-4" id="subject" name="subject" placeholder="Subject"
                                     required="required" data-validation-required-message="Please enter a subject" />
                                 <p class="help-block text-danger"></p>
                             </div>
                             <div class="control-group">
-                                <textarea class="form-control border-0 py-3 px-4" rows="3" id="message" placeholder="Message"
+                                <textarea class="form-control border-0 py-3 px-4" rows="3" id="message" name="message" placeholder="Message"
                                     required="required"
                                     data-validation-required-message="Please enter your message"></textarea>
                                 <p class="help-block text-danger"></p>
@@ -149,6 +149,7 @@
             </div>
         </div>
     </div>
+    
     <!-- Contact End -->
 
 
@@ -165,10 +166,10 @@
                     <p><i class="fa fa-phone-alt mr-2"></i>+57 321 3639 344</p>
                     <p><i class="fa fa-envelope mr-2"></i>spamovil10@gmail.com</p>
                     <div class="d-flex justify-content-start mt-4">
-                        <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="btn btn-lg btn-primary btn-lg-square" href="#"><i class="fab fa-instagram"></i></a>
+                        <!-- <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="#"><i class="fab fa-twitter"></i></a> -->
+                        <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="https://www.facebook.com/profile.php?id=61558305328547"><i class="fab fa-facebook-f"></i></a>
+                        <!-- <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="#"><i class="fab fa-linkedin-in"></i></a> -->
+                        <a class="btn btn-lg btn-primary btn-lg-square" href="https://www.instagram.com/venecia_spa_movil/"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-6 pl-lg-5">
@@ -176,12 +177,12 @@
                         <div class="col-sm-6 mb-5">
                             <h5 class="text-white text-uppercase mb-4">Quick Links</h5>
                             <div class="d-flex flex-column justify-content-start">
-                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Home</a>
-                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Servicios</a>
+                                <a class="text-white-50 mb-2" href="./index.html"><i class="fa fa-angle-right mr-2"></i>Home</a>
+                                <!-- <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Servicios</a> -->
                                 
                             </div>
                         </div>
-                        <div class="col-sm-6 mb-5">
+                        <!-- <div class="col-sm-6 mb-5">
                             <h5 class="text-white text-uppercase mb-4">Our Services</h5>
                             <div class="d-flex flex-column justify-content-start">
                                 <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Terapia Fisica</a>
@@ -190,8 +191,8 @@
                                 <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Masaje con Vela Aromatica</a>
                                 <a class="text-white-50" href="#"><i class="fa fa-angle-right mr-2"></i>Nail Care</a>
                             </div>
-                        </div>
-                        <div class="col-sm-12 mb-5">
+                        </div> -->
+                        <!-- <div class="col-sm-12 mb-5">
                             <h5 class="text-white text-uppercase mb-4">Newsletter</h5>
                             <div class="w-100">
                                 <div class="input-group">
@@ -201,7 +202,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -211,7 +212,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-md-left mb-3 mb-md-0">
-                    <p class="m-0 text-white">&copy; <a href="#">SpaMovil Venecia</a>. All Rights Reserved.</p>
+                    <p class="m-0 text-white">&copy; <a href="./index.html">SpaMovil Venecia</a>. All Rights Reserved.</p>
                 </div>
                 <div class="col-md-6 text-center text-md-right">
                     <p class="m-0 text-white">Designed by <a href="https://jesusgomez.netlify.app/">JGs Coding</a></p>
